// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageContainer /> Should render correctly 1`] = `
<div>
  <main
    class="page-container__container"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;

exports[`<PageContainer /> Should render correctly with custom className 1`] = `
<div>
  <main
    class="page-container__container test-custom-classname"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;

exports[`<PageContainer /> Should render correctly with prose 1`] = `
<div>
  <main
    class="page-container__container page-container__container--prose"
  >
    <div>
      some text
    </div>
  </main>
</div>
`;
